fix: Use a different Map implementation